changes to remove use of deprecated constructors in Java 9